<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">socss</string>
    <string name="app_config">QA测试配置</string>
    <string name="app_test">QA测试启动</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_test">开始测试</string>
    <string name="config_test">配置测试</string>
    <string name="step_test">单步测试</string>
    <string name="exit">测试退出</string>
    <string name="choose_def_config">隐藏配置选项</string>
    <string name="use_def_config">配置已经隐藏</string>
    <string name="use_self_config">隐藏配置</string>
    <string name="auto_test_config">自动测试</string>
    <string name="manual_operation_test_config">手动测试</string>
    <string name="tfcard_video">TF卡视频选择</string>
    <string name="usbhost_video">U盘视频选择</string>
    <string name="ethtest">以太网测试</string>
    <string name="cpuidtest">CPUID测试</string>
    <string name="cameratest">摄像头测试</string> 
    <string name="enable">开启</string>
    <string name="disable">关闭</string>
    <string name="save">保存并退出</string>
    <string name="platform">platform</string>
    <string name="chipid">Chip ID</string>
    <string name="ictype">IC type</string>
    <string name="reason">reason</string>
    <string name="custtype">custtype</string>
    <string name="set_tfcard_path">没有找到TF卡视频，请到配置测试里面选择TF卡视频</string>
    <string name="set_usbhost_path">没有找到U盘视频，请到配置测试里面选择U盘视频</string>
    <string name="finish_video_test">播放测试完成,准备开始下一项测试</string>
    <string name="video_test_error">播放测试错误</string>
    <string name="ethlog">测试日志</string>
    <string name="testresult">测试结果</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

</resources>
